rns-lang/tests/snapshots/lexer-directives-tab_right_after_dot.snap
---
source: jasm/tests/integration_test.rs
expression: "&combined"
---
----- INPUT  -----
.	
.end

----- STDOUT -----

----- STDERR -----
Error: lexing error
   ╭─[ tests/testdata/lexer/directives/tab_right_after_dot.ja:1:2 ]
   │
 1 │ .
   │  ┬  
   │  ╰── Unexpected character '\t'
   │ 
   │ Note: Expected one of the directives: .class, .super, .method, .end, .limit, .code
───╯
