rns-lang/tests/snapshots/lexer-directives-unknown_directive_as_second_token.snap
---
source: jasm/tests/integration_test.rs
expression: "&combined"
---
----- INPUT  -----
.class .unknown_directive HelloWorld
.end
----- STDOUT -----

----- STDERR -----
Error: lexing error
   ╭─[ test_data/integration/lexer/directives/unknown_directive_as_second_token.ja:1:8 ]
   │
 1 │ .class .unknown_directive HelloWorld
   │        ─────────┬────────  
   │                 ╰────────── Unknown directive '.unknown_directive'
   │ 
   │ Note: Valid directives are .class, .super, .method, .end, .code
───╯
