rns-lang/tests/snapshots/lexer-strings-unknown_escape_sequence.snap
---
source: jasm/tests/integration_test.rs
expression: "&combined"
---
----- INPUT  -----
.class public Test
.code "\u"

----- STDOUT -----

----- STDERR -----
Error: invalid escape sequence
   ╭─[ test_data/integration/lexer/strings/unknown_escape_sequence.ja:2:9 ]
   │
 2 │ .code "\u"
   │         ┬  
   │         ╰── Invalid escape sequence '\u'
   │ 
   │ Note: The character '\u' is not a valid escape sequence.
───╯
